# geo-utils

./: .gitignore  .travis.yml  Makefile  README.md  __init__.py  _config.yml  environment.yml  example_project_tifs.py  make.bat  meta.yaml  push.sh  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: python-package-conda.yml
docs/: conf.py  index.rst  requirements.txt
geo_utils/: __init__.py  converter.py  dataset_mgmt.py  geo_tools.py  geo_utils.py  geoconfig.py  raster_mgmt.py  shortest_path.py  shp_mgmt.py  srs_mgmt.py
graphs/: geo-utils-uml.pptx
sample-data/: froude.tif  froude.tif.aux.xml
