[metadata]
name = Geo_Utils
version = 0.0.2
license = MIT
description = Contents for the book.
author = Sebastian Schwindt, Beatriz Negreiros, Kilian Mouris
url = https://github.com/hydro-informatics/geo-utils
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = hydro-informatics
github_repo = geo-utils